@@ -671,7 +671,7 @@ pi ; ==> 3.141592653589793
 (eql #\a (car "aaa")) ; ==> t
 (eql -0.0 0.0) ; ==> nil
 
-; = null, atom, consp, listp, symbolp, stringp, characterp
+; = null, atom, consp, listp, symbolp, stringp, characterp, functionp
 
 ; = numberp, integerp, floatp
 ;
