@@ -11,6 +11,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
 
  * added the special operators catch, throw and unwind-protect
  * added vector, vectorp, svref and svlength
+ * added functionp
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
